--- a/TaskManagement.API/appsettings.json
+++ b/TaskManagement.API/appsettings.json
@@ -1,15 +1,15 @@
 {
+  "JwtSettings": {
+    "SecretKey": "your-super-secret-key-with-minimum-16-characters",
+    "Issuer": "TaskManagement",
+    "Audience": "TaskManagement",
+    "ExpirationInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "JwtSettings": {
-    "SecretKey": "your-super-secret-key-with-minimum-16-characters",
-    "Issuer": "TaskManagement",
-    "Audience": "TaskManagement",
-    "ExpiryInMinutes": 60
-  }
+  "AllowedHosts": "*"
 }
