--- a/TaskManagement.API/Dockerfile
+++ b/TaskManagement.API/Dockerfile
@@ -1,23 +1,26 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
+EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["TaskManagement.API/TaskManagement.API.csproj", "TaskManagement.API/"]
 COPY ["TaskManagement.Application/TaskManagement.Application.csproj", "TaskManagement.Application/"]
 COPY ["TaskManagement.Domain/TaskManagement.Domain.csproj", "TaskManagement.Domain/"]
 COPY ["TaskManagement.Infrastructure/TaskManagement.Infrastructure.csproj", "TaskManagement.Infrastructure/"]
-RUN dotnet restore "TaskManagement.API/TaskManagement.API.csproj"
+RUN dotnet restore "./TaskManagement.API/TaskManagement.API.csproj"
 COPY . .
 WORKDIR "/src/TaskManagement.API"
-RUN dotnet build "TaskManagement.API.csproj" -c Release -o /app/build
+RUN dotnet build "./TaskManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "TaskManagement.API.csproj" -c Release -o /app/publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./TaskManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TaskManagement.API.dll"] 
+ENTRYPOINT ["dotnet", "TaskManagement.API.dll"]
